--- a/resources/css/assignments.css
+++ b/resources/css/assignments.css
@@ -288,9 +288,9 @@
     }
     
     #btnsave {
-        margin-right: 300px;
         width: 90px;
         position: static;
+        left: 0%
     }
     /* @media screen and (max-width:450px) {
         #btnsave {
