--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -392,7 +392,7 @@
     }
     
     #btnsave {
-        left: 0%;
+        margin-right: 60%;
         width: 90px;
         margin-top: 3px;
         height: 32px;
