--- a/resources/css/assignments.css
+++ b/resources/css/assignments.css
@@ -206,7 +206,7 @@
     #inputtext {
         border: none;
         box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
-        text-align: center;
+        text-align: right;
         font-size: 12px;
         color: rgb(67, 111, 206);
     }
@@ -243,7 +243,6 @@
         font-size: 13px;
         font-weight: bold;
         text-align: center;
-        padding-left: 200px;
         color: rgb(67, 111, 206);
     }
     
@@ -251,8 +250,8 @@
         #modheader {
             font-size: 12px;
             font-weight: normal;
-            text-align: center;
-            padding-left: 200px;
+            text-align: left;
+            padding-left: -50px;
         }
     }
     
