update stastic and project page

--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -561,6 +561,8 @@
 
 #projectchating {
     background-color: #c0cfec;
+    overflow: auto;
+    padding-bottom: 70px;
 }
 
 #sendmessa {
@@ -648,7 +650,7 @@
 }
 
 .senders {
-    margin-top: 3%;
+    margin-top: 1%;
 }
 
 #sendersMessages {
@@ -666,13 +668,13 @@
     color: black;
     padding: 5px;
     text-align: right;
-    left: 50%;
+    left: 25%;
     padding-bottom: 15px;
-    margin-top: -7px;
+    margin-top: 2px;
 }
 
 .recivers {
-    margin-top: 5%;
+    margin-top: 1%;
 }
 
 #reciversMessages {
@@ -690,8 +692,8 @@
     padding: 5px;
     text-align: right;
     color: black;
-    left: 0%;
-    margin-top: -12px;
+    right: 30%;
+    margin-top: 5px;
     padding-bottom: 15px;
 }
 
