--- a/resources/css/students.css
+++ b/resources/css/students.css
@@ -641,7 +641,7 @@
     font-size: 13px;
     font-weight: bold;
     text-align: center;
-    padding-left: 200px;
+    padding-left: 45%;
     color: rgb(255, 255, 255);
     background-color: #0E70F2;
     padding-top: 8px;
@@ -819,4 +819,35 @@
 .persent input[type="radio"]:checked {
     background-color: #13be27;
     border-color: #13be27;
+}
+
+#btn-edit {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
+    color: #0E70F2;
+    border: none;
+    margin: -4px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    font-size: 10px;
+}
+
+#btn-detials {
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    font-size: 10px;
+}
+
+#print {
+    color: #0E70F2;
+    box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
+    font-size: 10px;
+    border-radius: 10px;
+    margin-top: -4px;
 }
