--- a/resources/css/students.css
+++ b/resources/css/students.css
@@ -851,3 +851,12 @@
     border-radius: 10px;
     margin-top: -4px;
 }
+
+#btn-add-stu {
+    width: 25%;
+    height: 30px;
+    margin-top: -30px;
+    font-size: 14px;
+    font-weight: normal;
+    float: left;
+}
