--- a/resources/css/project.css
+++ b/resources/css/project.css
@@ -42,11 +42,26 @@ font-size: 10px;
         margin-top: -5px;
     }
     
+    #notification {
+        margin-left: 170px;
+        margin-top: -36px;
+        margin-bottom: 70px;
+        border: none;
+        background-color: rgb(0, 0, 255);
+        z-index: 3 !important;
+        position: relative;
+    }
+    
     .notification {
         margin-left: 170px;
         margin-top: -36px;
         margin-bottom: 70px;
-        padding-top: -20px;
+        z-index: 3;
+        position: relative;
+        /* border: none;
+        background-color: rgb(0, 0, 255);
+        z-index: 3 !important;
+        position: relative; */
     }
     
     @media screen and (max-width: 500px) {
