--- a/resources/css/archive.css
+++ b/resources/css/archive.css
@@ -106,3 +106,87 @@
     font-weight: normal;
     margin-top: -10px;
 }
+
+
+/* .hr3 {
+    background-color: #ffffff;
+    border: none;
+    width: 100%;
+    height: 40px;
+    margin-top: 0px;
+    padding-top: 4px;
+    box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
+    position: fixed;
+} */
+
+#input-group {
+    width: 300px;
+    margin-left: 450px;
+    height: 30px;
+    box-shadow: 2px rgb(72, 72, 72);
+    position: fixed;
+}
+
+.form-control {
+    height: 33px;
+}
+
+#form-control {
+    height: 33px;
+    box-shadow: 1px rgb(72, 72, 72);
+}
+
+@media screen and (max-width: 1000px) {
+    #input-group {
+        margin-left: 300px;
+    }
+}
+
+@media screen and (max-width: 890px) {
+    #input-group {
+        margin-left: 270px;
+    }
+}
+
+@media screen and (max-width: 840px) {
+    #input-group {
+        margin-left: 200px;
+    }
+}
+
+@media screen and (max-width: 740px) {
+    #input-group {
+        margin-left: 180px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    #input-group {
+        width: 230px;
+        margin-top: 5px;
+        margin-left: 140px;
+    }
+    .form-control {
+        height: 28px;
+    }
+    #form-control {
+        width: 30px;
+        height: 28px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    #input-group {
+        width: 220px;
+        margin-top: 5px;
+        margin-left: 100px;
+    }
+}
+
+@media screen and (max-width: 370px) {
+    #input-group {
+        width: 200px;
+        margin-top: 5px;
+        margin-left: 80px;
+    }
+}
