--- a/resources/css/assignments.css
+++ b/resources/css/assignments.css
@@ -377,6 +377,25 @@
         z-index: 3;
     }
     
+    #btn-recive-edte-hw {
+        background-color: #ffffff;
+        box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
+        color: #0E70F2;
+        border: none;
+        /* border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px; */
+        margin-top: 5px;
+        font-size: 13px;
+        font-weight: normal;
+        width: 90px;
+        height: 33px;
+        display: block;
+        z-index: 3;
+    }
+    
     @media screen and (max-width:530px) {
         #btn-recive-hw {
             margin-top: 145px;
