--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -1,13 +1,45 @@
 #profile-card {
-    width: 93%;
-    height: 100%;
-    left: 0%;
+    width: 70%;
+    height: 90%;
+    left: 8%;
     margin-left: 0%;
     padding-left: 0%;
     box-shadow: 10% rgb(145, 153, 161);
     background-color: #ffffff;
-    margin-top: 0px;
+    margin-top: -40px;
     display: inline-block;
+    position: fixed;
+    margin-right: 20%;
+}
+
+@media screen and (max-width:800px) {
+    #profile-card {
+        left: 5%;
+        /* position: fixed; */
+    }
+}
+
+@media screen and (max-width:700px) {
+    #profile-card {
+        margin-left: 0%;
+        width: 90%;
+        /* left: 10%; */
+        /* position: fixed; */
+    }
+}
+
+@media screen and (max-width:550px) {
+    #profile-card {
+        width: 100%;
+        margin-top: -40px;
+        display: inline-block;
+        margin-right: 0%;
+        left: 0%;
+        /* position: fixed; */
+        margin-left: 0%;
+        right: 0%;
+        overflow: hidden;
+    }
 }
 
 #profile-card-header1 {
@@ -151,20 +183,30 @@
 }
 
 #profile-table {
-    width: 100%;
-    margin-left: 6%;
+    width: 50%;
+    margin-left: 2%;
     margin-top: -40px;
     font-size: 14px;
+    justify-content: center;
+    text-align: right;
+    position: fixed;
 }
 
-#btnsave {
-    margin-right: 60%;
-    width: 90px;
-    float: left;
+#table-td {
+    padding-left: 100px;
 }
 
-#btncancel {
-    width: 90px;
+@media screen and (max-width:700px) {
+    #profile-table {
+        justify-content: right;
+        text-align: right;
+        position: absolute;
+        width: 80%;
+    }
+    #table-td {
+        padding-left: 0px;
+        text-align: right;
+    }
 }
 
 #profile-edite-button-dropdow-gender {
@@ -184,6 +226,7 @@
     position: relative;
     z-index: 1;
     margin-right: 20px;
+    background-color: rgb(255, 255, 255);
 }
 
 #profile-edite-button-dropdow-gradeSeice {
@@ -200,4 +243,5 @@
     height: 30px;
     margin-top: 7px;
     margin-left: 20px;
+    background-color: rgb(255, 255, 255);
 }
