--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -30,14 +30,14 @@
 
 @media screen and (max-width:550px) {
     #profile-card {
-        width: 100%;
+        width: 95%;
         margin-top: -40px;
         display: inline-block;
-        margin-right: 0%;
-        left: 0%;
+        /* margin-right: 2%; */
+        /* left: 0%; */
         /* position: fixed; */
-        margin-left: 0%;
-        right: 0%;
+        margin-left: -10px;
+        /* right: 3%; */
         overflow: hidden;
     }
 }
@@ -74,6 +74,7 @@
     -moz-border-radius: 0px;
     -ms-border-radius: 0px;
     -o-border-radius: 0px;
+    box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
 }
 
 #profile-image {
