--- a/resources/css/students.css
+++ b/resources/css/students.css
@@ -662,26 +662,100 @@
     color: rgb(67, 111, 206);
 }
 
-#btnsave-file {
+
+/* #btnsave-file {
     margin-right: 60%;
     width: 80px;
     font-size: 10px;
     font-weight: normal;
     margin-top: -3px;
+} */
+
+#btnsave-file {
+    width: 80px;
+    font-weight: normal;
+    margin-top: 17px;
+    height: 32px;
+    position: absolute;
+    margin-right: 75%;
+    /* left: -100px; */
+    /* font-size: 10px; */
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width:450px) {
+    #btnsave-file {
+        margin-right: 70%;
+        /* width: 90px;
+        height: 32px; */
+        position: absolute;
+    }
+}
+
+@media screen and (max-width:360px) {
+    #btnsave-file {
+        margin-right: 63%;
+    }
+}
+
+#bt-edite {
+    width: 90px;
+    font-weight: normal;
+    margin-top: 17px;
+    height: 32px;
+    position: absolute;
+    margin-right: 85%;
+}
+
+@media screen and (max-width:992px) {
+    #bt-edite {
+        margin-right: 78%;
+    }
+}
+
+@media screen and (max-width:520px) {
+    #bt-edite {
+        margin-right: 75%;
+    }
+}
+
+@media screen and (max-width:450px) {
+    #bt-edite {
+        margin-right: 70%;
+        /* width: 90px;
+        height: 32px; */
+        position: absolute;
+    }
+}
+
+@media screen and (max-width:360px) {
+    #bt-edite {
+        margin-right: 63%;
+    }
+}
+
+
+/* @media screen and (max-width: 420px) {
     #btnsave-file {
         position: absolute;
         margin-top: 5px;
     }
-}
+} */
 
-#btncancel-file {
+
+/* #btncancel-file {
     width: 80px;
     font-size: 10px;
     font-weight: normal;
     position: fixed;
+} */
+
+#btncancel-file {
+    width: 80px;
+    margin-top: 17px;
+    height: 32px;
+    position: absolute;
+    /* font-size: 12px; */
+    font-weight: normal;
 }
 
 
