--- a/resources/css/archive.css
+++ b/resources/css/archive.css
@@ -260,3 +260,64 @@
         margin-left: 1%;
     }
 }
+
+#card-img-schedule{
+    margin-right: 5%;
+    position: static;
+}
+@media screen and (max-width:840px) {
+    #card-img-schedule{
+        margin-left: 1.5%;  
+    }
+}
+@media screen and (max-width:800px) {
+    #card-img-schedule{
+        margin-left: 0%;
+    }
+}
+@media screen and (max-width:767px) {
+    #card-img-schedule{
+        margin-left: 1%;    
+    }
+}
+@media screen and (max-width:700px) {
+    #card-img-schedule{
+     
+        margin-left: 2%;
+        font-size: 13px;
+        /* padding-right: 0%; */
+    }
+}
+@media screen and (max-width:600px) {
+    #card-img-schedule{
+        margin-left: 0.8%;
+        font-size: 12px;
+        /* padding-right: 0%; */
+    }
+}
+#card-title-schedule{
+    width: 100%; 
+    height:50px; 
+    top:0%; 
+    left:0%;
+    box-shadow:none; 
+    margin-left:0%;
+    right:0%;  
+    margin-top:0%; 
+    padding-top:10px; 
+    border-bottom-left-radius:0%;
+    border-bottom-right-radius:0%;
+}
+@media screen and (max-width:450px) {
+    #card-title-schedule{
+        max-height: 40px;;
+        /* padding-right: 0%; */
+    }
+}
+@media screen and (max-width:370px) {
+    #card-title-schedule{
+        max-height: 30px;
+        padding-top: 6px;
+        /* padding-right: 0%; */
+    }
+}
