--- a/resources/css/project.css
+++ b/resources/css/project.css
@@ -38,7 +38,7 @@ font-size: 10px;
         height: 29px;
         width: 29px;
         border-radius: 100%;
-        margin-left: 100px;
+        margin-left: 106px;
         margin-top: -5px;
     }
     
@@ -53,11 +53,12 @@ font-size: 10px;
     }
     
     .notification {
-        margin-left: 170px;
-        margin-top: -36px;
+        margin-left: 178px;
+        margin-top: -34px;
         margin-bottom: 70px;
         z-index: 3;
         position: relative;
+        width: 47px;
         /* border: none;
         background-color: rgb(0, 0, 255);
         z-index: 3 !important;
@@ -65,14 +66,25 @@ font-size: 10px;
     }
     
     @media screen and (max-width: 500px) {
+        .notification {
+            margin-left: 77px;
+        }
+    }
+    #button-header {
+        padding-right: 2px;
+    }
+    @media screen and (max-width: 500px) {
         #button-header {
-            width: 80px;
+            width: 60px;
+            padding-right: 2px;
+            padding-left: 2px;
+
         }
         .user {
             display: none;
         }
         .user-icon {
-            margin-right: 10px;
+            margin-right: 5px;
             margin-left: 5px;
         }
     }
