--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,15 @@
-@import './sidebar.css';
-@import './project.css';
-@import './projects-forms.css';
-@import './assignments.css';
-@import './recives-HW.css';
-@import './students.css';
-@import './studyingbooks.css';
-@import './sendnotification.css';
-@import './stastics.css';
-@import './archive.css';
-@import './profile.css';
-@import './chattingGroup.css';
+@import "./sidebar.css";
+@import "./project.css";
+@import "./projects-forms.css";
+@import "./assignments.css";
+@import "./recives-HW.css";
+@import "./students.css";
+@import "./studyingbooks.css";
+@import "./sendnotification.css";
+@import "./stastics.css";
+@import "./archive.css";
+@import "./profile.css";
+@import "./chattingGroup.css";
+@import "./mainAdmin.css";
+@import "./controllforgrades.css";
+@import "./managedrpart.css";
