--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -16,6 +16,8 @@
     border: none;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom-right-radius: 0%;
+    border-bottom-left-radius: 0%;
 }
 
 .Addbtn-projctsNavbar {
