--- a/resources/css/studyingbooks.css
+++ b/resources/css/studyingbooks.css
@@ -16,6 +16,8 @@
     border: none;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom-right-radius: 0%;
+    border-bottom-left-radius: 0%;
     font-weight: normal;
 }
 
@@ -596,6 +598,8 @@
     border: none;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom-right-radius: 0%;
+    border-bottom-left-radius: 0%;
 }
 
 .btn-subject-book-Navbar:hover {
