--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,6 @@
 @import './archive.css';
 @import './profile.css';
 @import './chattingGroup.css';
+@import './mainAdmin.css';
+@import './controllforgrades.css';
+@import './managedrpart.css';
