--- a/resources/css/assignments.css
+++ b/resources/css/assignments.css
@@ -709,6 +709,8 @@ float: right;
     border: none;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom-right-radius: 0%;
+    border-bottom-left-radius: 0%;
 }
 
 /* main css students */
@@ -730,6 +732,8 @@ float: right;
     border: none;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom-right-radius: 0%;
+    border-bottom-left-radius: 0%;
     font-weight: normal;
     margin: 0%;
 }
