--- a/resources/css/project.css
+++ b/resources/css/project.css
@@ -208,26 +208,27 @@ font-size: 10px;
     
     ul {
         list-style-type: none;
-        padding: 0;
+        /* padding: 0; */
         background-color: #ffffff;
         position: relative;
         top: 15px;
         left: 36%;
-        width: 30%;
+        width: 100px;
         height: 10%;
         box-shadow: none;
         text-decoration: none;
+        padding-right:0%;
     }
     
     li {
-        float: left;
+        float: right;
         display: block;
     }
     
     li a {
         display: block;
         color: #0E70F2;
-        text-align: center;
+        /* text-align: center; */
         padding: 8px 9px;
         text-decoration: none;
         width: 70px;
@@ -236,6 +237,8 @@ font-size: 10px;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
         z-index: 2;
+        /* float:right;
+        margin-right:0%; */
     }
     
     li a:hover:not(.active) {
