--- a/resources/css/students.css
+++ b/resources/css/students.css
@@ -20,7 +20,7 @@
 } */
 
 #btn-group-students {
-    margin-left: 25%;
+    margin-left: 22%;
     margin-top: 21px;
     position: fixed;
 }
@@ -37,21 +37,28 @@
     border: none;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom-right-radius: 0%;
+    border-bottom-left-radius: 0%;
     font-weight: normal;
 }
 
 
 /* Responsive Styles */
 
+@media screen and (max-width: 1180px) {
+    #btn-group-students {
+        margin-left: 18%;
+    }
+}
 @media screen and (max-width: 1100px) {
     #btn-group-students {
-        margin-left: 16%;
+        margin-left: 15%;
     }
 }
 
 @media screen and (max-width: 992px) {
     #btn-group-students {
-        margin-left: 17%;
+        margin-left: 16%;
     }
     #btn-studentsNavbar {
         padding: 5px 8px;
@@ -61,14 +68,29 @@
         top: -45px;
     }
 }
-
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 970px) {
     #btn-group-students {
-        margin-left: 12%;
+        margin-left: 15%;
+    }
+}
+@media screen and (max-width: 950px) {
+    #btn-group-students {
+        margin-left: 14%;
     }
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 930px) {
+    #btn-group-students {
+        margin-left: 13%;
+    }
+}
+@media screen and (max-width: 900px) {
+    #btn-group-students {
+        margin-left: 11.5%;
+    }
+}
+
+@media screen and (max-width: 875px) {
     #btn-group-students {
         margin-left: 12%;
     }
@@ -80,7 +102,11 @@
         top: -45px;
     }
 }
-
+@media (max-width: 820px) {
+    #btn-group-students {
+        margin-left: 11%;
+    }
+}
 @media (max-width: 799px) {
     #btn-group-students {
         display: none;
