--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -2,7 +2,7 @@
         margin: 0;
         font-family: Arial, sans-serif;
     }
-    
+
     .sidebar {
         height: 100%;
         width: 170px;
@@ -18,18 +18,18 @@
         flex-direction: column;
         z-index: 2;
     }
-    
+
     .sidebar ul {
         list-style-type: none;
         padding: 0;
     }
-    
+
     .sidebar li {
         padding: 10px;
         text-align: center;
         border-bottom: 1px solid #bbb;
     }
-    
+
     .sidebar a {
         text-decoration: none;
         color: white;
@@ -37,24 +37,24 @@
         padding-right: 15px;
         display: block;
     }
-    
+
     .toggle-btn {
         font-size: 20px;
         cursor: pointer;
         color: white;
         padding: 10px;
     }
-    
+
     .sidebaricon {
         float: right;
         margin-left: -8px;
         margin-top: -5px;
     }
-    
+
     .sidebartext {
         font-size: 16px;
     }
-    
+
     .hdr2 {
         background-color: rgb(255, 255, 255);
         height: 50px;
@@ -65,7 +65,7 @@
         position: fixed;
         z-index: 1;
     }
-    
+
     .content {
         margin-right: 150px;
         /*Adjusttomatchthemin-widthofthesidebar*/
@@ -105,15 +105,15 @@
         margin-right: 50px;
     }
 } */
-    
+
     .btn-bottomNavbar {
         display: none;
     }
-    
+
     .bottombaricon {
         display: none;
     }
-    
+
     @media screen and (max-width: 700px) {
         .bottomNavbar {
             background-color: #03174C;
@@ -183,7 +183,7 @@
         .btn-bottomNavbar { width: 60px;}
         /* .bottombaricon {} */
     }
-    
+
     /* .hdr-subject {
     background-color: rgb(255, 255, 255);
     height: 50px;
@@ -200,9 +200,9 @@ position: fixed;
 
 }
 */
-    
+
     .spaces {
-        width: 300px;
+        width: 450px;
         height: 45px;
         background-color: white;
         float: right;
@@ -212,17 +212,22 @@ position: fixed;
         border: none;
         padding-left: 10px;
     }
-    
+
     #subject-icon-hdr2 {
-        margin-left: -160px;
+        /* left: -160px; */
+       right:170px;
+        position:absolute;
     }
-    
+
     .subjectname {
-        float: left;
+        float: right;
         margin-top: 10px;
-        margin-left: 10px;
+       margin-right:210px;
+       /* text-align: right; */
+
+        /* margin-left: 10px; */
     }
-    
+
     .dep-sub-name {
         width: 75px;
         background-color: white;
@@ -241,7 +246,7 @@ position: fixed;
         padding-left: 9px;
         padding-right: 10px;
     }
-    
+
     /* .cards-child {
         background-color: white;
         width: 170px;
@@ -257,7 +262,7 @@ position: fixed;
         -ms-border-radius: 7px;
         -o-border-radius: 7px;
     }
-    
+
     .cards-child-child {
         width: 170px;
         height: 30px;
@@ -290,7 +295,7 @@ position: fixed;
 }
     /* @media screen and (max-width: 778px) {
     #container-cards-subject{
-    
+
 ]    margin-right:3%;
     }
 } */
@@ -304,7 +309,7 @@ position: fixed;
    /* @media screen and (max-width: 700px) {
         #container-cards-subject{
          padding-left:1%;
-        padding-right:0.5%; 
+        padding-right:0.5%;
         margin-right:9.5%;
         align-items:center;
         }
@@ -324,7 +329,7 @@ position: fixed;
         -ms-border-radius: 7px;
         -o-border-radius: 7px;
     }
-    
+
     .cards-child-child {
         width: 170px;
         height: 30px;
@@ -340,7 +345,7 @@ position: fixed;
         position: absolute;
         margin-left: 0px;
         margin-right: 0px;
-    }      
+    }
     /* @media screen and (max-width: 1274px) {
         #cards-child-subject {
             left:0%;
@@ -356,13 +361,13 @@ position: fixed;
             margin-left: 20px;
              /* padding-left:0%; */
         }
-    } 
+    }
     @media screen and (max-width: 778px) {
         #cards-child-subject {
             margin-left: 5px;
              /* padding-left:0%; */
         }
-    }        
+    }
     @media screen and (max-width: 354px) {
     #cards-child-subject {
             width: 150px;
@@ -392,19 +397,23 @@ position: fixed;
             width: 130px;
         }
     }
-    
+
     @media screen and (max-width: 700px) {
         .spaces {
-            width: 130px;
+            width: 200px;
+            float: right;
         }
         #subject-icon-hdr2 {
             float: right;
+            right: 0px;
+            /* position: absolute; */
         }
         .subjectname {
-            float: left;
+            /* float: left; */
+            margin-right: 40px;
         }
     }
-    
+
     @media screen and (max-width: 550px) {
         .dep-sub-name {
             width: 60px;
@@ -420,25 +429,28 @@ position: fixed;
         .subjectname {
             display: none;
         }
+        #subject-icon-hdr2 {
+            top:6px ;
+        }
     }
-    
+
     @media screen and (max-width: 500px) {
         .spaces {
             width: 40px;
         }
     }
-    
+
     #notification-bord-messages {
         background-color: #a8b0c0;
         overflow: auto;
         padding-bottom: 70px;
         padding-right: 40px;
     }
-    
+
     .recivers-notif {
         margin-top: 1%;
     }
-    
+
     #recivers-notifi-Messages {
         width: 100%;
         background-color: #f8fcfe;
@@ -465,7 +477,7 @@ position: fixed;
         position: absolute;
         bottom: 0%;
     } */
-    
+
     .recivin-notifi-date {
         float: left;
         font-size: 10px;
@@ -473,7 +485,7 @@ position: fixed;
         position: absolute;
         bottom: 0%;
     }
-    
+
     .sender-notifi {
         float: right;
         font-size: 10px;
@@ -485,7 +497,7 @@ position: fixed;
         margin-right: 2%;
     }
      /* main css students */
-        
+
      .dep-name {
         width: 80px;
         background-color: white;
@@ -504,7 +516,7 @@ position: fixed;
         padding-left: 11px;
         padding-right: 10px;
     }
-    
+
     @media screen and (max-width: 550px) {
         .dep-name {
             width: 62px;
@@ -520,7 +532,7 @@ position: fixed;
         margin-top: 65px;
         position: fixed;
     }
-    
+
     #btn-mainpageNavbar {
         background-color: white;
         color: #0E70F2;
@@ -537,16 +549,16 @@ position: fixed;
         border-bottom-left-radius: 0%;
         font-weight: normal;
     }
-    
-    
+
+
     /* Responsive Styles */
-    
+
     @media screen and (max-width: 1100px) {
         #btn-group-mainpage {
             margin-left: 35%;
         }
     }
-    
+
     @media screen and (max-width: 992px) {
         #btn-group-mainpage {
             margin-left: 32%;
@@ -559,16 +571,16 @@ position: fixed;
             top: -45px;
         }
     }
-    
-    
+
+
     /* @media screen and (max-width: 930px) {
     #btn-group-mainpage {
                 margin-left: 12%;
             }
         }
          */
-    
-    
+
+
     /* @media screen and (max-width: 860px) {
     #btn-group-mainpage {
                 padding: 5px 8px;
@@ -577,32 +589,32 @@ position: fixed;
                 top: 84px;
             }
         } */
-    
-    
+
+
     /* @media (max-width: 799px) {
     #btn-group-mainpage {
                 display: none;
             }
         } */
-    
+
     @media screen and (max-width: 850px) {
         #btn-group-mainpage {
             margin-left: 28%;
         }
     }
-    
+
     @media screen and (max-width: 740px) {
         #btn-group-mainpage {
             margin-left: 24%;
         }
     }
-    
+
     @media screen and (max-width: 700px) {
         #btn-group-mainpage {
             margin-left: 34%;
         }
     }
-    
+
     @media screen and (max-width: 500px) {
         #btn-group-mainpage {
             margin-left: 30%;
@@ -654,4 +666,3 @@ position: fixed;
         background-color: #B4DAF6;
         color: #ffffff;
     }
-    
