update academic projectsMain

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,8 +11,9 @@
 @import './profile.css';
 @import './chattingGroup.css';
 @import './mainAdmin.css';
-@import './controllforgrades.css';
+@import './controllforgrades.css'; 
 @import './managedrpart.css';
+@import './quality.css';
 /* @import "bootstrap/dist/css/bootstrap.min.css"; */
 @import "./sidebar.css";
 @import "./project.css";
