--- a/resources/css/mainAdmin.css
+++ b/resources/css/mainAdmin.css
@@ -211,13 +211,13 @@
     .btn-group.btn_group_nav_departments {
         margin-left: 11%;
     }
-  
+
 }
 
 @media screen and (max-width: 720px) {
     .btn-group.btn_group_nav_departments {
         margin-left: 12%;
-    } 
+    }
      .btn-departments-Navbar{
         font-size: 10px;
         padding: 9px 7px;
@@ -446,9 +446,9 @@ float: right;
 @media screen and (max-width: 360px) {
     .input-group.input-search-admin {
         width: 160px;
-        margin-left: 70px;  
+        margin-left: 70px;
         font-size: 9px;
-      
+
     }
 }
 /* @media screen and (max-width: 350px) {
@@ -502,22 +502,22 @@ float: right;
         margin-top: -70px;
     }
 }
-.btn.gendar{
+/*.btn.gendar{
     font-size: 11px;
     font-weight: normal;
-    /* margin-top: 55px; */
+     margin-top: 55px;
     display:flex;
     box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
-    /* position: absolute; */
+    /* position: absolute;
     height: 30px;
     margin-left: 50%;
     /* width: 90px; */
     /* padding-top: 15px; */
     /* right:20%; */
 /* float: right; */
-    /* padding-left: 0%; */
-}
-.btn.dregree-of-siencistic{
+    /* padding-left: 0%;
+}*/
+/* .btn.dregree-of-siencistic{
     font-size: 11px;
     font-weight: normal;
     display:flex;
@@ -525,6 +525,61 @@ float: right;
     height: 30px;
     margin-left: 50%;
 
+} */
+.btn.gendar{
+    float: right;
+    color: black;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    display:flex;
+    height: 30px;
+    padding-top:15px;
+    /* width: 20%; */
+    font-size: 12px;
+    box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
+    border: none;
+    margin-top: 7px;
+    position: relative;
+    z-index: 1;
+    margin-right: 20px;
+}
+
+.btn.dregree-of-siencistic {
+    display:flex;
+    color: black;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    /* width: 20%; */
+    font-size: 12px;
+    box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
+    border: none;
+    height: 30px;
+    margin-top: 7px;
+    margin-left: 70px;
+    padding-top:15px;
+    padding-right:17px;
+
+}
+@media screen and (max-width:400px){
+    .btn.dregree-of-siencistic {
+    margin-left: 50px;
+}
+}
+@media screen and (max-width:370px){
+    .btn.dregree-of-siencistic {
+    margin-left: 30px;
+}
+}
+@media screen and (max-width:355px){
+    .btn.dregree-of-siencistic {
+    margin-left: 20px;
+}
 }
 .btn.studyingbooks-acade{
     font-size: 11px;
@@ -764,14 +819,14 @@ float: right;
             -o-border-radius: 8px;
             position: static;
         }
-        
+
         @media screen and (max-width:700px) {
             .card.card-sentnotifications {
                 width: 97%;
                 margin-left: 1%;
             }
         }
-        
+
         .card.card-sentnotifications-chating {
             width: 100%;
             height: 350px;
@@ -781,33 +836,33 @@ float: right;
             margin-left: 0px;
             position: static;
         }
-        
+
         .selectstudenttxet {
             margin-left: 620px;
             margin-top: 10px;
             font-size: 12px;
         }
-        
+
         @media (max-width: 1100px) {
             .selectstudenttxet {
                 font-size: 12px;
                 margin-left: 450px;
             }
         }
-        
+
         @media (max-width: 900px) {
             .selectstudenttxet {
                 font-size: 12px;
                 margin-left: 380px;
             }
         }
-        
+
         @media screen and (max-width:826px) {
             .selectstudenttxet {
                 margin-left: 270px;
             }
         }
-        
+
         @media (max-width: 550px) {
             .selectstudenttxet {
                 font-size: 10px;
@@ -825,7 +880,7 @@ float: right;
             margin-top: 0px;
             position: static;
         }
-        
+
         .btn.btn-send {
             margin-top: -5px;
             height: 35px;
@@ -834,10 +889,10 @@ float: right;
         }
         .container.notification_chatting{
             padding-top: 10px;
-            } 
+            }
         @media screen and (max-width:550px){
         .container.notification_chatting{
         padding-top: 40px;
-        } 
         }
-        
+        }
+
