--- a/resources/css/managedrpart.css
+++ b/resources/css/managedrpart.css
@@ -8,6 +8,13 @@
     position: relative;
     margin-top: 10px;
 }
+.input.checkbox{
+    float: right;
+
+ }
+.name-group{
+    text-align: right;
+}
 
 @media screen and (max-width: 1000px) {
     .input-group.input-search-manageDepart {
@@ -87,7 +94,7 @@
             margin-left: 115px;
         }
     }
-    @media screen and (max-width: 400px) {
+    /* @media screen and (max-width: 400px) {
         .input-group.input-search-manageDepart {
             margin-left: 100px;
         }
@@ -97,31 +104,37 @@
         width: 170px;
         margin-left: 90px;
     }
-}
+} */
 @media screen and (max-width: 360px) {
     .input-group.input-search-manageDepart {
         width: 160px;
-        margin-left: 70px;  
+        margin-left: 100px;
         font-size: 9px;
-      
+
     }
 }
+
 /* @media screen and (max-width: 350px) {
     .input-group.input-search-manageDepart {
     }
 } */
-@media screen and (max-width: 330px) {
+/* @media screen and (max-width: 330px) {
     .input-group.input-search-manageDepart {
         width: 160px;
-        /* margin-left: 40px; */
+    }
+} */
+@media screen and (max-width: 320px) {
+    .input-group.input-search-manageDepart {
+        width: 150px;
+        margin-left: 90px;
     }
 }
-@media screen and (max-width: 300px) {
+/* @media screen and (max-width: 300px) {
     .input-group.input-search-manageDepart {
-        /* width: 150px; */
+        width: 150px;
         margin-left: 60px;
     }
-}
+}*/
 .btn.manageDepart-addAcademic {
     font-size: 12px;
     font-weight: normal;
@@ -140,7 +153,7 @@
 @media screen and (max-width:550px) {
     .btn.manageDepart-addAcademic {
         font-size: 10px;
-        margin-top: 15px;
+        /* margin-top: 15px; */
 
     }
 }
@@ -153,10 +166,10 @@
 }
 @media screen and (max-width:370px) {
     .btn.manageDepart-addAcademic {
-        font-size: 10px;
+        font-size: 8px;
         padding-right: 3px;
         padding-left:3px;
-        margin-top: -70px;
+        /* margin-top: -70px; */
     }
 }
 .btn.manageDepart-sentnotifications{
@@ -465,7 +478,7 @@
                 height: 30px;
                 padding: 5px 8px;
                 font-size: 10px;
-            } 
+            }
         }*/
         /* @media screen and (max-width: 850px) {
             .btn-group.btn_group_nav_manageDepart {
@@ -494,7 +507,7 @@
                 font-size: 11px;
                 padding: 5px 8px;
             }
-        
+
         }
         /* @media screen and (max-width: 780px) {
             .btn-group.btn_group_nav_manageDepart {
@@ -505,9 +518,9 @@
             .btn-group.btn_group_nav_manageDepart {
                 margin-left: 11%;
             }
-          
+
         } */
-        
+
         @media screen and (max-width: 720px) {
             /* .btn-group.btn_group_nav_manageDepart {
                 margin-left: %;
@@ -521,7 +534,7 @@
                 padding: 5px 7px;
             }
         }
-        
+
         @media screen and (max-width: 700px) {
             .btn-group.btn_group_nav_manageDepart {
                 margin-left: 30%;
@@ -552,8 +565,8 @@
                 /* position: fixed; */
             }
         }
-        
-        
+
+
         .btn-group.btn_group_nav_manageDepart-level {
             margin-left: 33%;
             margin-top: 51px;
@@ -619,7 +632,7 @@
         @media screen and (max-width: 992px) {
             .btn-group.btn_group_nav_manageDepart-level {
                 margin-left: 20%;
-               
+
             }
             /* .btn-manageDepart-level-Navbar {
                 width: 80px;
@@ -648,7 +661,7 @@
             .btn-group.btn_group_nav_manageDepart-level {
                 margin-left: 16%;
             }
-        } 
+        }
         @media screen and (max-width: 830px) {
             .btn-group.btn_group_nav_manageDepart-level {
                 margin-left: 15%;
@@ -676,7 +689,7 @@
                 font-size: 10px;
                 padding: 5px 8px;
             }
-        
+
         }
         @media screen and (max-width: 780px) {
             .btn-group.btn_group_nav_manageDepart-level {
@@ -690,13 +703,13 @@
                 display: none;
 
             }
-          
+
         }
-        
+
       /*  @media screen and (max-width: 720px) {
              .btn-group.btn_group_nav_manageDepart-level {
                 margin-left: %;
-            }  
+            }
              .btn-manageDepart-level-Navbar{
                 font-size: 10px;
                 padding: 9px 7px;
@@ -706,7 +719,7 @@
                 padding: 5px 7px;
             }
         }*/
-        
+
         /* @media screen and (max-width: 700px) {
             .btn-group.btn_group_nav_manageDepart-level {
                 margin-left: 30%;
@@ -736,7 +749,7 @@
             display: none;
             /* position: fixed; */
         }
-        
+
         @media screen and (max-width: 760px) {
             .btn.manageDepartlevelNavbar_dropdown {
                 font-size: 11px;
@@ -755,7 +768,7 @@
                 /* text-align: left; */
                 /* padding-left: 0%; */
             }
-        
+
         }
         @media screen and (max-width: 700px) {
             .btn.manageDepartlevelNavbar_dropdown {
@@ -775,4 +788,3 @@
               font-size: 10px;
             }
         } */
-        
