--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,13 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+// bootstrap-icons
+@import "bootstrap-icons/font/bootstrap-icons.css";
+
+@font-face {
+    font-family: 'Bootstrap Icons';
+    src: url('/build/assets/fonts/bootstrap-icons.woff2') format('woff2'),
+         url('/build/assets/fonts/bootstrap-icons.woff') format('woff');
+}
+
