--- a/resources/css/mainAdmin.css
+++ b/resources/css/mainAdmin.css
@@ -18,6 +18,7 @@
     -ms-transition: 1;
     -o-transition: 1;
     padding-top: 10px;
+    /* z-index: -1; */
 }
 
 .card-departments-child {
@@ -36,6 +37,8 @@
     position: absolute;
     margin-top: 11px;
     /* margin-top: 4.2%; */
+    /* z-index: -1; */
+
 }
 
 /* #btn-studybookStudentsdropdown-levels {
@@ -889,4 +892,32 @@ float: right;
         padding-top: 40px;
         }
         }
+        .container.container_for_cards{
+            padding-bottom:250px;
+            padding-top:0px;
+            overflow:auto;
+            height:100%;
+            margin-top:22%;
+            position:static;
+            transition: 1;
+            align-content: center;
+            width:100%;
+            padding-right:20px;
+            /* padding-left: -60px; */
+            right: 10%;
+            transition: - 0.5s;
+            padding-top: 0px;
+            padding-bottom: 40px;
+        }
+        @media screen and (max-width:700px){
+            .container.container_for_cards{
+                margin-right: 0px !important;
+                width:100%;
+                padding-right:0px;
+                padding-left: -30px;
+                right:0px;
+                overflow:auto;
+            }
+            }
+
 
