--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -1050,5 +1050,11 @@ position: relative;
         background-color:#1558DB;
         border-bottom-left-radius: 25px;
         border-bottom-right-radius: 25px;
-
+    }
+    .select.select_students_to_proj{
+        border: none;
+        box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
+        text-align: right;
+        font-size: 12px;
+        color: rgb(67, 111, 206);
     }
