--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,6 +14,7 @@
 @import './controllforgrades.css';
 @import './managedrpart.css';
 @import './quality.css';
+@import "./students_affairs.css";
 /* @import "bootstrap/dist/css/bootstrap.min.css"; */
 @import "./sidebar.css";
 @import "./project.css";
