--- a/resources/css/mainAdmin.css
+++ b/resources/css/mainAdmin.css
@@ -22,12 +22,12 @@
 }
 
 .card-departments-child {
-    width: 220px;
+    width: 218px;
     height: 40px;
     background-color: #118DEC;
     color: white;
-    margin-left: -1px;
-    margin-right: 0px;
+    /* margin-left: -1px; */
+    margin-right: 3px;
     font-size: 12px;
     padding-top: 10px;
     border-bottom-left-radius: 5px;
@@ -36,9 +36,9 @@
     bottom: 0%;
     position: absolute;
     margin-top: 11px;
+    weight: bold;
     /* margin-top: 4.2%; */
     /* z-index: -1; */
-
 }
 
 /* #btn-studybookStudentsdropdown-levels {
@@ -679,7 +679,6 @@ float: right;
     /* display: inline; */
     box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
     position: fixed;
-    color: black;
 }
 
 @media (max-width: 1100px) {
@@ -806,6 +805,88 @@ float: right;
             margin-left: 15%;
         }
         } */
+
+
+.btn.spacific_Academicdropdown {
+    font-size: 11px;
+    /* width: 110px; */
+    height: 30px;
+    font-weight: normal;
+    padding-left: 5px;
+    margin-left: 50%;
+    margin-top: 55px;
+    box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
+    position: fixed;
+}
+@media screen and (max-width: 1100px) {
+.btn.spacific_Academicdropdown {
+    margin-left: 45%;
+}
+}
+
+/* @media screen and (max-width:992px) {
+#btn-spacific_Academicdropdown {
+    margin-left: 65%;
+}
+} */
+
+@media screen and (max-width:930px) {
+.btn.spacific_Academicdropdown {
+    margin-left: 43%;
+}
+}
+
+@media screen and (max-width:900px) {
+.btn.spacific_Academicdropdown {
+    margin-left:40%;
+}
+}
+
+@media screen and (max-width:826px) {
+.btn.spacific_Academicdropdown {
+    margin-left:35%;
+}
+}
+
+@media (max-width: 768px) {
+.btn.spacific_Academicdropdown {
+    font-size: 10px;
+    width: 100px;
+}
+}
+
+@media (max-width: 700px) {
+.btn.spacific_Academicdropdown {
+    font-size: 10px;
+    width: 100px;
+    margin-left: 50%;
+}
+}
+
+@media (max-width: 550px) {
+.btn.spacific_Academicdropdown {
+    font-size: 9px;
+    width: 90px;
+    margin-left: 40%;
+}
+}
+
+@media (max-width: 400px) {
+.btn.spacific_Academicdropdown {
+    margin-left: 33%;
+}
+}
+@media (max-width: 355px) {
+    .btn.spacific_Academicdropdown {
+        margin-left: 15%;
+    }
+    }
+    /* @media (max-width: 325px) {
+        .btn.spacific_Academicdropdown {
+            margin-left: 15%;
+        }
+        } */
+
         .card.card-sentnotifications {
             width: 60%;
             height: 400px;
