update chatting groups page of academic and students

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,7 @@
 @import './managedrpart.css';
 @import './quality.css';
 @import "./students_affairs.css";
+@import "./chatbox.css";
 /* @import "bootstrap/dist/css/bootstrap.min.css"; */
 @import "./sidebar.css";
 @import "./project.css";
