--- a/resources/css/mainAdmin.css
+++ b/resources/css/mainAdmin.css
@@ -18,7 +18,7 @@
     -ms-transition: 1;
     -o-transition: 1;
     padding-top: 10px;
-    /* z-index: -1; */
+    /* z-index: 2; */
 }
 
 .card-departments-child {
@@ -36,7 +36,7 @@
     bottom: 0%;
     position: absolute;
     margin-top: 11px;
-    weight: bold;
+    font-weight: bold;
     /* margin-top: 4.2%; */
     /* z-index: -1; */
 }
@@ -977,9 +977,10 @@ float: right;
             padding-bottom:250px;
             padding-top:0px;
             overflow:auto;
-            height:100%;
-            margin-top:22%;
-            position:static;
+            height:80%;
+            top:100px;
+            position:absolute;
+            /* z-index:1; */
             transition: 1;
             align-content: center;
             width:100%;
@@ -989,6 +990,8 @@ float: right;
             transition: - 0.5s;
             padding-top: 0px;
             padding-bottom: 40px;
+            background-color: #f2f2f2;
+
         }
         @media screen and (max-width:700px){
             .container.container_for_cards{
