--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -735,7 +735,7 @@
     position: fixed;
 }
 
-#send-input {
+.form-control.send-input {
     height: 35px;
     margin-top: -10x;
     box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
